# HogwartsLegacySDK

./: CMakeLists.txt  PreSDK.hpp
SDK/: AAIController.cpp  AAIController.hpp  AAIPath.cpp  AAIPath.hpp  AAOESpellTool.cpp  AAOESpellTool.hpp  AARActor.cpp  AARActor.hpp  AAROriginActor.cpp  AAROriginActor.hpp  AARSharedWorldGameMode.cpp  AARSharedWorldGameMode.hpp  AARSharedWorldGameState.cpp  AARSharedWorldGameState.hpp  AARSharedWorldPlayerController.cpp  AARSharedWorldPlayerController.hpp  AARSkyLight.cpp  AARSkyLight.hpp  AAbleHUD.cpp  AAbleHUD.hpp  AAble_Character.cpp  AAble_Character.hpp  AAble_GameMode.cpp  AAble_GameMode.hpp  AAbstractNavData.cpp  AAbstractNavData.hpp  AAccioSpellTool.cpp  AAccioSpellTool.hpp  AActor.cpp  AActor.hpp  AActor_LockOnReticle.cpp  AActor_LockOnReticle.hpp  AActor_SubsonicProximity.cpp  AActor_SubsonicProximity.hpp  AAggroHideTrigger.cpp  AAggroHideTrigger.hpp  AAkAcousticPortal.cpp  AAkAcousticPortal.hpp  AAkAmbientSound.cpp  AAkAmbientSound.hpp  (+31508 more)
SDK/BP_GlowBugSwarm_State/: Type.hpp
SDK/EAILockSource/: Type.hpp
SDK/EAIOptionFlag/: Type.hpp
SDK/EAIRequestPriority/: Type.hpp
SDK/EActivityTypeBits/: Type.hpp
SDK/EAdditiveBodyState/: Type.hpp
SDK/EAlphaChannelMode/: Type.hpp
SDK/EAngularDriveMode/: Type.hpp
SDK/EAnimGroupRole/: Type.hpp
SDK/EAnimLinkMethod/: Type.hpp
SDK/EAnimMechanicType/: Type.hpp
SDK/EAnimNotifyEventType/: Type.hpp
SDK/EAnimSpeedType/: Type.hpp
SDK/EAnimationMode/: Type.hpp
SDK/EAppMsgType/: Type.hpp
SDK/EAppReturnType/: Type.hpp
SDK/EApplicationState/: Type.hpp
SDK/EAxis/: Type.hpp
(+326 files in other folders)
