set(TARGET SDK)
project(${TARGET})

FILE(GLOB_RECURSE ${TARGET}_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/SDK/*.hpp")
FILE(GLOB_RECURSE ${TARGET}_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/SDK/*.cpp")

add_library(${TARGET} STATIC ${${TARGET}_HEADERS} ${${TARGET}_SOURCES} PreSDK.hpp)
target_include_directories(${TARGET} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(${TARGET} PUBLIC ue4ss)